cabal-version:      2.4
name:               rogue-lamb
version:            0.1.0.0
synopsis:           A small roguelike
homepage:           https://github.com/IanBand/rogue-lamb
bug-reports:        https://github.com/IanBand/rogue-lamb/issues

license: BSD-2-Clause
author:             Ian Band
maintainer:         Ian Band <ian.r.band@gmail.com>

category:           game
stability:          experimental
extra-source-files: CHANGELOG.md README.md

executable rogue-lamb
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, ansi-terminal ==0.11, array
    hs-source-dirs:   app
    default-language: Haskell2010

source-repository head
    type:   git
    location: https://github.com/IanBand/rogue-lamb
